--- a/Kubernetes/roles/nodes/defaults/main.yaml
+++ b/Kubernetes/roles/nodes/defaults/main.yaml
@@ -2,3 +2,10 @@
 MASTER_IP: 192.168.1.10
 NODE01_IP: 192.168.1.20
 NODE02_IP: 192.168.1.21
+GATEWAY: 192.168.1.1
+DNS_SERVER: 192.168.1.1
+
+# USER SCTRUCTURE
+USER: root
+GROUP: root
+MODE: 0775
